tests/ui/traits/default-method/rustc_must_implement_one_of.stderr
error[E0046]: not all trait items implemented, missing one of: `eq`, `neq`
  --> $DIR/rustc_must_implement_one_of.rs:41:1
   |
LL | impl Equal for T3 {}
   | ^^^^^^^^^^^^^^^^^ missing one of `eq`, `neq` in implementation
   |
note: required because of this annotation
  --> $DIR/rustc_must_implement_one_of.rs:3:1
   |
LL | #[rustc_must_implement_one_of(eq, neq)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
